# controle

./: CMakeLists.txt  sv.js
include/json/: json.cpp  json.h
include/processo/: define.h  processo.cpp  processo.h
include/socket/: define.h  my.h  socket.cpp  socket.h
install/: init_install.cpp  install.cpp  install_dir.exe.stackdump
internal/: define.h  functions.cpp  functions.h  init.cpp  main.cpp  push.cpp
update/: update.cpp  update.h
